--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-2.77MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-2.76MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
   - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
-  - {name: 🇺🇸 美国-3.79MB/s(Youtube:不良林), server: 38.59.224.49, port: 40001, type: vmess, uuid: 97cd14b8-4332-40f9-84fc-3fc235354df9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
