--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-2.77MB/s(Youtube:不良林), server: 168.138.173.205, port: 22503, type: vmess, uuid: 62e99d02-7105-443d-eeff-2cfeb4a4fe11, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.31MB/s(Youtube:不良林), server: 192.210.206.50, port: 11188, type: vmess, uuid: de0ff7f6-370e-41c9-c24a-b932c7c1ad58, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 192.210.206.50}}
+  - {name: 🇮🇳 印度-1.82MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
   - {name: 🇫🇷 法国-1.52MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-2.76MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
-  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 172.99.188.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: 167.88.61.14, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-3.40MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.97MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇦 加拿大-3.01MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-8.47MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.61MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-2.49MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2, server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇫🇷 法国-1.81MB/s(Youtube:不良林), server: 62.210.113.98, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇬🇧 英国-1.35MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.31MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.82MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.97MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.01MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.47MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.61MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.49MB/s(Youtube:不良林) 2
+      - 🇫🇷 法国-1.81MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
